[package]
name = "mockito_query_bug_repro"
version = "0.1.0"
authors = ["Thomas Etter <thomas.etter@auterion.com>"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
env_logger = "0.6"
reqwest = "0.9"

[dev-dependencies]
mockito = { path = "mockito"}

